[package]
name = "telegram-llm-bot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
langchain-rust = { version = "4.6.0", features = ["ollama"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde_json = "1.0.133"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
